welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.code
def fizzBuzz(a:Int):String = {
  (a) match  {
    case a if (a%3)&&(a%5) =>"Fizz Buzz"
    case a if a%3 =>"Fizz"
    case a if a%5 =>"Buzz"
    case a => ""+a
  }
}